; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_hevc_sei.c_decode_nal_sei_suffix.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_hevc_sei.c_decode_nal_sei_suffix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@AV_LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Skipped SUFFIX SEI %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, %struct.TYPE_3__*, i32, i32)* @decode_nal_sei_suffix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_nal_sei_suffix(i32* %0, i8* %1, %struct.TYPE_3__* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %12 = load i32, i32* %10, align 4
  switch i32 %12, label %18 [
    i32 128, label %13
  ]

13:                                               ; preds = %5
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @decode_nal_sei_decoded_picture_hash(i32* %15, i32* %16)
  store i32 %17, i32* %6, align 4
  br label %27

18:                                               ; preds = %5
  %19 = load i8*, i8** %8, align 8
  %20 = load i32, i32* @AV_LOG_DEBUG, align 4
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @av_log(i8* %19, i32 %20, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %21)
  %23 = load i32*, i32** %7, align 8
  %24 = load i32, i32* %11, align 4
  %25 = mul nsw i32 8, %24
  %26 = call i32 @skip_bits_long(i32* %23, i32 %25)
  store i32 0, i32* %6, align 4
  br label %27

27:                                               ; preds = %18, %13
  %28 = load i32, i32* %6, align 4
  ret i32 %28
}

declare dso_local i32 @decode_nal_sei_decoded_picture_hash(i32*, i32*) #1

declare dso_local i32 @av_log(i8*, i32, i8*, i32) #1

declare dso_local i32 @skip_bits_long(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
